# legalize-mcp

./: .gitignore  .mcp.json.example  CONSTITUTION.md  DISCOVERY.md  README.md  pyproject.toml  server.json
src/legalize_mcp/: __init__.py  __main__.py  audit.py  citations.py  client.py  countries.py  models.py  server.py
tests/: test_parse.py
